fix finder .goto overlap bug

--- a/ui/static/css/screen.css
+++ b/ui/static/css/screen.css
@@ -2236,6 +2236,7 @@ button[name="action-edit"] {
   word-wrap: break-word;
   -o-text-overflow: ellipsis;
   text-overflow: ellipsis;
+  padding-right: 17.391%;
   display: block;
 }
 .finder .start, .finder .end, .finder .bycompletion, .finder .bystart, .finder .byend, .finder .end, .finder .byend {
@@ -2285,6 +2286,7 @@ button[name="action-edit"] {
   float: left;
   width: 48.936%;
   margin-right: 2.128%;
+  padding: 0;
 }
 .finder .focus .title:first-child, .finder .focus .bytitle:first-child {
   display: inline;
